# xcloud-condenser

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  next.config.mjs  package.json  pnpm-lock.yaml
.github/workflows/: build-appimage.yml  msvc.yml
app/: globals.css  layout.tsx  page.tsx
components/: about-dialog.tsx  add-service-dialog.tsx  artwork-dialog.tsx  export-dialog.tsx  game-browser.tsx  game-card.tsx  selected-games-panel.tsx  settings-dialog.tsx  streaming-service-browser.tsx
include/: browserselectdialog.h  gamepassapi.h  gamepassgame.h  imageloader.h  jsonrequester.h  mainwindow.h  settingsdialog.h  sgdbenums.h  steamgriddbapi.h  xcchelper.h
lib/: store.ts  streaming-services.ts
res/: browsers.json  resources.qrc
scripts/: Dockerfile.jammy  build-appimage.sh  run-docker-build-appimage.sh  run-podman-build-appimage.sh
src/: browserselectdialog.cpp  gamepassapi.cpp  gamepassgame.cpp  imageloader.cpp  jsonrequester.cpp  main.cpp  mainwindow.cpp  settingsdialog.cpp  steamgriddbapi.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: crc32.rs  lib.rs  main.rs  vdf.rs
src-tauri/src/commands/: mod.rs  steam_integration.rs  steamgriddb.rs  xcloud_games.rs
types/: index.ts
